Revert "fix alignment issues portfolio"
This reverts commit c28e1beeb5c4b60d68bb52632bd5e6c4d59382d4.

--- a/_sass/layout/_portfolio.scss
+++ b/_sass/layout/_portfolio.scss
@@ -24,8 +24,10 @@
         .portfolio-hover-content {
           font-size: 20px;
           position: absolute;
-          bottom: 0;
+          top: 50%;
           width: 100%;
+          height: 20px;
+          margin-top: -12px;
           text-align: center;
           color: white;
           i {
